# paycorbot

./: .gitignore  .pylintrc  Dockerfile  PKG-INFO  README.md  app.py  end2end.sh  pyproject.toml
paycorbot/: .env.example  .gitignore  __main__.py  banner.py  calendar.py  calendar.py.save  dom_utils.py  driver_manager.py  driver_manager_x86.py  log.py  main.py  main.py.save  net_utils.py  parser.py  schedule_calendar.py  schedules.py
