[tool.poetry]
name = "paycorbot"
version = "1.3.0"
description = ""
authors = ["DJ Stomp <85457381+DJStompZone@users.noreply.github.com>"]
readme = "README.md"
include = [".env.example", ".gitignore", "Dockerfile", "docker-compose.yml", "app.py"]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.27.1"
python-dotenv = "^1.0.1"
webdriver-manager = "^4.0.2"
bs4 = "^0.0.2"
pandas = "^2.2.3"
colorama = "^0.4.6"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
